<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkthemebg"
    tools:context=".LoginScreen"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--    Upper part-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp">
            <TextView
                android:id="@+id/appname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:fontFamily="@font/limelight"
                android:textAlignment="center"
                android:padding="5dp"
                android:transitionName="transition1"/>
            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/welcomeBack"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textAlignment="center"
                android:padding="5dp"
                android:transitionName="transition2"/>
        </LinearLayout>

        <!--    Form    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">
            <TextView
                android:id="@+id/signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/signinocontinue"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginBottom="15dp"
                android:transitionName="transition3"/>

            <!--            Email       -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Mail"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="1dp"
                app:hintTextColor="@color/white">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mailinput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="12sp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/poppins"
                    android:transitionName="transition4"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--            Password        -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:layout_marginVertical="5dp"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="1dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white"
                app:hintTextColor="@color/white">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordinput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="12sp"
                    android:fontFamily="@font/poppins"
                    android:transitionName="transition5"/>
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/forgotpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Forgot password?"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins"
                    android:layout_alignParentEnd="true"
                    android:paddingVertical="8dp" />
            </RelativeLayout>

            <!--            Sign in button      -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/signinbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign In"
                android:textSize="14sp"
                android:padding="5dp"
                android:backgroundTint="@color/primarycolor"
                android:textColor="@color/black"
                app:rippleColor="#121212"
                android:fontFamily="@font/poppins"
                app:strokeColor="@color/purple_200"
                app:cornerRadius="5dp"
                android:transitionName="transition6"/>
        </LinearLayout>

        <!--        Create new account      -->
        <TextView
            android:id="@+id/createnewacc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="3dp"
            android:text="@string/donthaveaccount"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textAlignment="center"
            android:padding="10dp"
            android:transitionName="transition7"/>

    </LinearLayout>
</ScrollView>